[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Counter_Proyectile.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemigos/Counter/Bullet/l0_Counter_Shot1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemigos/Counter/Bullet/l0_Counter_Shot2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemigos/Counter/Bullet/l0_Counter_Shot3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemigos/Counter/Bullet/l0_Counter_Shot4.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Proyectile",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8.65023, 8.50027 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10.0701 )

[node name="Counter_Proyectile" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "Proyectile"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="Timer_Death" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Area2D_Counter_Proyectile" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Counter_Proyectile" index="0"]

shape = SubResource( 3 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="timeout" from="Timer_Death" to="." method="_on_Timer_Death_timeout"]

[connection signal="area_entered" from="Area2D_Counter_Proyectile" to="." method="_on_Area2D_area_entered"]

[connection signal="body_entered" from="Area2D_Counter_Proyectile" to="." method="_on_Area2D_Counter_Proyectile_body_entered"]


